[package]
name = "x"
version = "0.1.0"
authors = ["y x"]
edition = "2021"
license = "UNLICENSED"


[dependencies]

embassy-embedded-hal = { version = "0.1.0", path = "../embassy/embassy-embedded-hal", features = ["defmt"] }
embassy-sync = { version = "0.2.0", path = "../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.1.0", path = "../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", path = "../embassy/embassy-rp", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "pio", "critical-section-impl"] }
embassy-usb = { version = "0.1.0", path = "../embassy/embassy-usb", features = ["defmt"] }
embassy-futures = { version = "0.1.0", path = "../embassy/embassy-futures" }
embassy-usb-logger = { version = "0.1.0", path = "../embassy/embassy-usb-logger" }

defmt = "0.3"
defmt-rtt = "0.4"

#  cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
st7789 = "0.6.1"
display-interface = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }


embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.10" }
embedded-hal-async = "0.2.0-alpha.1"
embedded-io = { version = "0.4.0", features = ["async", "defmt"] }
embedded-storage = { version = "0.3" }
static_cell = "1.0.0"
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"

rp2040-hal = "0.8.0" 

[profile.release]

debug = false
